--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
             <li class="list-inline-item">
               <i class="fab fa-js-square"></i>
             </li>
+            <li class="list-inline-item">
+              <i class="fab fa-java"></i>
+            </li>
+            <li class="list-inline-item">
+              <i>MySQL</i>
+            </li>
+            <li class="list-inline-item">
+              <i>SQL Server</i>
+            </li>
           </ul>
           <div class="subheading mb-3">Herramientas</div>
           <ul>
@@ -149,10 +158,16 @@
               <i>Visual Studio</i>
             </li>
             <li class="list-item">
+              <i>NetBeans</i>
+            </li>
+            <li class="list-item">
               <i>Sublime</i>
             </li>
             <li class="list-item">
-              <i>Autocad</i>
+              <i>Gimp</i>
+            </li>
+            <li class="list-item">
+              <i>InkSpace</i>
             </li>
           </ul>
         </div>
