--- a/index.html
+++ b/index.html
@@ -146,10 +146,22 @@
               <i class="fab fa-java"></i>
             </li>
             <li class="list-inline-item">
+              <i>C#</i>
+            </li>
+            <li class="list-inline-item">
+              <i>C++</i>
+            </li>
+            <li class="list-inline-item">
               <i>MySQL</i>
             </li>
             <li class="list-inline-item">
               <i>SQL Server</i>
+            </li>
+            <li class="list-inline-item">
+              <i>ASP.NET</i>
+            </li>
+            <li class="list-inline-item">
+              <i>LINQ</i>
             </li>
           </ul>
           <div class="subheading mb-3">Herramientas</div>
