--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Intereses</h2>
           <p>Me gusta estar informado de lo que ha salido nuevo en robótica y tecnología en general</p>
-          <p class="mb-0">La automatización me´parece muy interesante y parece que tener conocimiento en programación es cada vez más importante</p>
+          <p class="mb-0">La automatización me parece muy interesante y parece que tener conocimiento en programación es cada vez más importante</p>
         </div>
       </section>
     </div>
