--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
           </ul>
           <div class="subheading mb-3">Herramientas</div>
           <ul>
+	    <li class="list-item">
+              <i>AutoCad</i>
+            </li>
             <li class="list-item">
               <i>Visual Studio</i>
             </li>
